--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <a href="new.html" id="home">Home</a>
 </nav>
 <div id="slider">
-	<div id="one"></div>
-	<div id="two"></div>
-    <div id="three"></div>
-    <div id="four"></div>
-    <div id="five"></div>
+	<div id="one" class="images"><img src="new-york-city-3671887__340.webp"></div>
+	<div id="two" class="images"><img src="istockphoto-1196727497-170667a.jpg"></div>
+    <div id="three" class="images"><img src="girl-in-the-elevator-1382909__340.webp"></div>
+    <div id="four" class="images"><img src="istockphoto-1216560985-170667a.jpg"></div>
+    <div id="five" class="images"><img src="new-york-city-3671887__340.webp"></div>
 </div>
 </body>
 </html>
